# Cisco-Flash

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CiscoAutoFlash.spec  CiscoAutoFlash_GUI_Clean.py  README.md  main.py  pyproject.toml  requirements.txt  vulture_whitelist.py
.github/: dependabot.yml
.github/workflows/: checks.yml
OBSMEM/: .gitignore  AGENTS.md  README.md  index.md  log.md
OBSMEM/.obsidian/: graph.json
OBSMEM/analyses/: CiscoAutoFlash_Current_State.md  CiscoAutoFlash_Current_State_2026-04-12.md  Memory_Lint_Checklist.md  README.md
OBSMEM/concepts/: Explorer_Blind_Judge_Workflow.md  Knowledge_System_Model.md  Obsidian_MCP_Integration_Policy.md  Operator_Console_UI.md  Project_Chronicler_Workflow.md  Session_Artifacts_Flow.md
OBSMEM/daily/: 2026-04-13.md  2026-04-14.md  README.md
OBSMEM/decisions/: Knowledge_System_Model.md  README.md  index.md
OBSMEM/inbox/: README.md
OBSMEM/mirrors/: Active_Risks.md  CiscoAutoFlash_Current_State.md  Current_Work.md  Hardware_Smoke_Gate.md  Open_Architecture_Questions.md  README.md
OBSMEM/projects/: CiscoAutoFlash.md  Hardware_Workflow.md
OBSMEM/raw/: README.md
OBSMEM/sources/: LLM_Wiki_Pattern.md  Obsidian_MCP_Recommendations_2026-04-14.md  README.md
OBSMEM/templates/: README.md  current-work.md  decision.md  project-note.md  source-summary.md
artifacts/: mcp_runtime_health.json
ciscoautoflash/: __init__.py  config.py
ciscoautoflash.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ciscoautoflash/core/: events.py  logging_utils.py  models.py  operator_messages.py  reporting.py  serial_transport.py  session_artifacts.py  single_instance.py  snapshots.py  ssh_transport.py  state.py  transport.py  workflow.py
ciscoautoflash/devtools/: __init__.py  blind_judge.py  evidence_pack.py  hardware_day.py  mcp_runtime_health.py  obsmem_chronicler.py  obsmem_lint.py  obsmem_open.py  project_bootstrap.py  session_close.py  session_return_triage.py  ui_smoke.py
ciscoautoflash/profiles/: __init__.py  c2960x.py
ciscoautoflash/replay/: __init__.py  adapter.py  factory.py  loader.py  runner.py
ciscoautoflash/ui/: __init__.py  app.py
docs/: evidence_workflow.md  mcp_stack.md
replay_scenarios/: full_install_verify.toml  scan_config_dialog.toml  scan_login.toml  scan_press_return.toml  scan_ready.toml  scan_rommon.toml  scan_user_prompt.toml  stage1_reboot_config_dialog.toml  stage2_firmware_missing.toml  stage2_install_success.toml  stage2_install_timeout.toml  stage3_artifact_incomplete.toml  stage3_report_state_mismatch.toml  stage3_verify.toml
scripts/: build_field_bundle.py  check_connection_snapshot.py  check_mcp_runtime.py  pre_hardware_preflight.py  run_blind_judge.py  run_demo_gui_smoke.py  run_evidence_pack.py  run_hidden_ssh_check.py  run_mcp_healthcheck.py  run_obsmem_chronicler.py  run_obsmem_lint.py  run_obsmem_open.py  run_project_bootstrap.py  run_session_close.py  run_ui_smoke.py  triage_session_return.py
tests/: test_blind_judge.py  test_c2960x_profile.py  test_config.py  test_demo_adapter.py  test_evidence_pack.py  test_hardware_day.py  test_mcp_runtime_health.py  test_obsmem_chronicler.py  test_obsmem_lint.py  test_obsmem_open.py  test_pre_hardware_preflight.py  test_project_bootstrap.py  test_replay_loader.py  test_replay_runner.py  test_run_demo_gui_smoke.py  test_run_hidden_ssh_check.py  test_serial_transport.py  test_session_artifacts.py  test_session_close.py  test_session_return_triage.py  test_ssh_transport.py  test_ui_app.py  test_ui_smoke.py  test_workflow.py  test_workflow_contracts.py
testsprite_tests/: standard_prd.json  testsprite_frontend_test_plan.json
Возьму С Собой/: README_ПЕРЕД_ПОЛЕВЫМ_ТЕСТОМ.txt  Запустить CiscoAutoFlash.bat
(+25 files in other folders)
